Fixed button breaking on small screens

--- a/app/frontend/scss/section/header.scss
+++ b/app/frontend/scss/section/header.scss
@@ -300,3 +300,18 @@ button,
         margin: 20px 0;
     }
 }
+@media all and (max-width: 335px) {
+    button,
+    .button {
+        font-size: 16px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .split-button-icon {
+        width: 45px;
+        min-width: 45px;
+        i {
+            font-size: 14px;
+        }
+    }
+}
